# math-it

./: .gitignore
Maple/: README.md  bSpline.mw  cubicSpline.mw
OpenMP-Wave-Parallel/: CMakeLists.txt  README.md  algorithms.c  algorithms.h  main.c
OpenMP-Wave-Parallel/graph/: graph.py
SVD/: README.md  main.ipynb  middle_repr.lol  middle_repr_std.lol  optimized.ipynb  primitiveOptimized.ipynb  primitiveOptimized.lol  prtimitive.ipynb  saver.py  stndImpl.ipynb
